using TMPro;
using UnityEngine;

namespace FiremanTrial.WithoutArchitecture
{
    public class Player : MonoBehaviour
    {
        public Extinguisher myExtinguisher;
        private PanLid _panLid;
        [SerializeField] private Animator animator;
        [SerializeField] private CharacterController characterController;
        [SerializeField] private float moveSpeed = 5;
        [SerializeField] private float gravity = 10;
        [SerializeField] private float maxDistanceToTakeObjects = 15f;
        [SerializeField] private TextMeshProUGUI canInteractText;
        [SerializeField] private QuestManager questManager;
        private Camera _camera;
        private float _targetRotation;
        private readonly Vector3 _middleScreen = new Vector3(0.5f, 0.5f, 0);
        private bool _canMove = true;
        [SerializeField] private Transform handlePosition;
        private bool isInteracting = false;

        public bool CanMove
        {
            get { return _canMove; }
            set { _canMove = value; }
        }

        private void Start()
        {
            if (characterController == null)
            {
                if (GetComponent<CharacterController>())
                {
                    characterController = GetComponent<CharacterController>();
                }
                else
                {
                    characterController = gameObject.AddComponent<CharacterController>();
                }
            }

            if (animator == null)
            {
                Debug.Log("animator is null", this);
            }

            _camera = Camera.main;
        }

        private void Update()
        {
            if (!_canMove)
            {
                return;
            }



            //Change position
            var inputXAxis = Input.GetAxis("Horizontal");
            var inputYAxis = Input.GetAxis("Vertical");
            var forward = characterController.transform.TransformDirection(Vector3.forward);
            var right = characterController.transform.TransformDirection(Vector3.right);
            var moveDirection = (inputXAxis * right + inputYAxis * forward).normalized;
            animator.SetFloat("Move", inputYAxis);
            moveDirection *= moveSpeed;
            moveDirection += gravity * Vector3.down;
            characterController.Move(moveDirection * Time.deltaTime);

            //Change rotation
            var xRotationAxes = Input.GetAxis("Mouse X");
            var yRotationAxes = -Input.GetAxis("Mouse Y");

            _targetRotation += yRotationAxes;
            _targetRotation = Mathf.Clamp(_targetRotation, -90, 90);

            _camera.transform.localRotation = Quaternion.Euler(_targetRotation, 0, 0);
            characterController.transform.Rotate(Vector3.up, xRotationAxes);

            //Interact with extinguisher
            if (myExtinguisher != null)
            {
                if (Input.GetMouseButtonDown(0))
                {
                    Debug.Log("Primary action called.");
                    myExtinguisher.activeExtinguisher = true;
                }


                if (Input.GetMouseButtonUp(0))
                {
                    Debug.Log("Primary action stopped.");
                    myExtinguisher.activeExtinguisher = false;
                }
            }

            //Raycast to find objects
            var ray = _camera.ViewportPointToRay(_middleScreen);
            var hits = Physics.RaycastAll(ray, maxDistanceToTakeObjects);
            var findSomethingOnHit = false;
            Debug.DrawRay(ray.origin, ray.direction * maxDistanceToTakeObjects, Color.red);

            foreach (var hit in hits)
            {
                if (hit.transform.CompareTag("Extinguisher"))
                {
                    var extinguisher = hit.transform.GetComponent<Extinguisher>();
                    Debug.Log("Extinguisher hit");
                    findSomethingOnHit = true;

                    if (extinguisher.CanBeTake())
                    {
                        if (canInteractText == null)
                        {
                            Debug.Log("TextMeshProUGUI dont referenced");
                        }
                        else
                        {
                            canInteractText.gameObject.SetActive(true);
                            canInteractText.text = "'E' -> Coletar o extintor.";
                        }

                        if (Input.GetKeyUp(KeyCode.E))
                        {
                            if (myExtinguisher != null)
                            {
                                myExtinguisher.activeExtinguisher = false;
                                myExtinguisher.RemoveFromHand();
                                myExtinguisher = null;
                            }

                            myExtinguisher = extinguisher;
                            myExtinguisher.MoveToHand(this);
                        }
                    }

                    break;
                }
                else if (hit.transform.CompareTag("Discharge"))
                {
                    var discharge = hit.transform.GetComponent<Discharge>();
                    findSomethingOnHit = true;
                    if (canInteractText == null)
                    {

                        Debug.Log("TextMeshProUGUI dont referenced");
                    }
                    else
                    {
                        canInteractText.gameObject.SetActive(true);
                        canInteractText.text = "'E' -> Dar descarga.";
                    }

                    if (Input.GetKeyUp(KeyCode.E))
                    {
                        discharge.Play();
                    }

                    break;
                }
                else if (hit.transform.CompareTag("PanLid"))
                {
                    var panLid = hit.transform.GetComponent<PanLid>();
                    findSomethingOnHit = true;
                    if (canInteractText == null)
                    {

                        Debug.Log("TextMeshProUGUI dont referenced");
                    }
                    else
                    {
                        canInteractText.gameObject.SetActive(true);
                        canInteractText.text = "'E' -> Pegar a tampa da panela.";
                    }

                    if (Input.GetKeyUp(KeyCode.E))
                    {
                        panLid.GoToUserInventory();
                        _panLid = panLid;
                    }

                    break;
                }
                else if (hit.transform.CompareTag("Fire"))
                {
                    var fire = hit.transform.GetComponent<Fire>();
                    if (_panLid == null)
                    {
                        break;
                    }

                    findSomethingOnHit = true;
                    if (canInteractText == null)
                    {

                        Debug.Log("TextMeshProUGUI dont referenced");
                    }
                    else
                    {
                        canInteractText.gameObject.SetActive(true);
                        canInteractText.text = "'E' -> Tampar a frigideira.";
                    }

                    if (Input.GetKeyUp(KeyCode.E))
                    {
                        _panLid.PlaceInPan();
                        fire.extinguishFire();
                    }

                    break;
                }

                else if (hit.transform.CompareTag("KitchenGas"))
                {
                    var gas = hit.transform.GetComponent<KitchenGas>();
                    if (!gas.Open())
                    {
                        break;
                    }

                    findSomethingOnHit = true;
                    if (canInteractText == null)
                    {

                        Debug.Log("TextMeshProUGUI dont referenced");
                    }
                    else
                    {
                        canInteractText.gameObject.SetActive(true);
                        canInteractText.text = "'E' -> Fechar o gÃ¡s.";
                    }

                    if (Input.GetKeyUp(KeyCode.E))
                    {
                        gas.CloseGas();
                    }

                    break;
                }
                else if (hit.transform.CompareTag("Door") && !isInteracting)
                {
                    if (questManager.DoorIsOpen())
                    {
                        break;
                    }

                    Debug.Log("Door hit");
                    findSomethingOnHit = true;

                    if (canInteractText == null)
                    {
                        Debug.Log("TextMeshProUGUI dont referenced");
                    }
                    else
                    {
                        canInteractText.gameObject.SetActive(true);
                        canInteractText.text = "'E' -> Abrir a porta.";
                    }

                    if (Input.GetKeyUp(KeyCode.E))
                    {
                        questManager.OpenDoor();
                        isInteracting = true;
                        animator.Play("Opening");
                    }

                    break;
                }
                else if (hit.transform.CompareTag("Wall"))
                {
                    break;
                }

                if (!findSomethingOnHit)
                {
                    canInteractText.text = "";
                    canInteractText.gameObject.SetActive(false);
                }

            }
        }
    }
}